--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<version>3.12.0</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-core</artifactId>
 			<version>${feign.version}</version>
